# marketagents

./: README.md  final-content-strategy.md  final-content-strategy_ptbr.md  market_research.md  market_research_ptbr.md  pyproject.toml  visual-content.md  visual-content_ptbr.md
src/insta/: crew.py  main.py
src/insta/config/: agents.yaml  tasks.yaml
